--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "newman run QAG_Diprella.postman_collection.json"
+    "api-test": "newman run QAG_Diprella.postman_collection.json -e QAG_Diprella.postman_environment.json"
   },
   "repository": {
     "type": "git",
